# invest-compute

./: README.md  example-openapi.yml  pygeoapi-config.yml  requirements.txt
.github/workflows/: test.yml
invest_processes/: Dockerfile  README.md  pygeoapi-config-example.yml  pygeoapi-config.yml  pyproject.toml  startup_script.sh
invest_processes/src/: processes.py
invest_processes/src/invest_processes/: execute.py  slurm_manager.py  utils.py  validate.py
invest_processes/static/css/: default.css
invest_processes/templates/: _base.html  exception.html
invest_processes/templates/jobs/: job.html
invest_processes/templates/jobs/results/: index.html
slurm_cluster_config/: .gitignore  README.md  ansible.cfg  bundled-openapi.yml  compute_node_playbook.yml  gcloud-ssh-wrapper.sh  gcp.yml  hpc-slurm.yml  lb.tf  login_node_playbook.yml  openapi.yml  server_interface.tf  startup_script.sh  versions.tf
slurm_cluster_config/hpc-slurm/: .terraform.lock.hcl  main.tf  providers.tf  server_interface.tf
slurm_cluster_config/hpc-slurm/results_bucket/: bucketlist.js  index.html  readme.md
tests/: test_server.py
tests/test_data/: carbon_error.invs.json  carbon_willamette.invs.json  invest_carbon_datastack.tgz  invest_carbon_error_datastack.tgz  lulc_current_willamette.tif  lulc_future_willamette.tif
