[project]
name = "invest-processes"
description = "InVEST pygeoapi processes"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
maintainers = [
    {name = "Natural Capital Project Software Team"}
]
dynamic = ["version"] # the version is provided dynamically by setuptools_scm
dependencies = [
    "flask",
    "natcap.invest",
    "pygeoapi>=0.23.2",
    "google-cloud-storage"
]

[project.urls]
homepage = "http://github.com/natcap/invest-compute"

[build-system]
# setuptools<82 because pkg_resources was deprecated, but we still need it for
# rasterio as a dependency of pygeoapi
requires = ['setuptools>=64,<82', 'wheel', 'setuptools_scm>=8.0']
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."

[tool.setuptools.packages.find]
where = ["src"]
